tests/src/frontend/syntax/invalid/lvalue_in_positional_argument.sk
fun main(): String {
  f(x.!y)
}
